<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context="com.example.jonsmauricio.eyesfood.ui.FoodsActivity"
android:orientation="vertical"
tools:showIn="@layout/activity_foods"
android:paddingTop="24dp">

    <!-- Card Perfil -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin">

        <RelativeLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Etiqueta Info general -->
            <TextView
                android:id="@+id/tvFoodsInfoGeneralTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/foods_title_info_general"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:paddingBottom="16dp"/>

            <TextView
                android:id="@+id/tvFoodsInfoGeneralNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvFoodsInfoGeneralTitulo"/>

            <RatingBar
                android:id="@+id/rbFoodsRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/ratingBarStyleSmall"
                android:numStars="5"
                android:stepSize="0.1"
                android:isIndicator="true"
                android:layout_below="@id/tvFoodsInfoGeneralNombre"/>

            <TextView
                android:id="@+id/tvFoodsInfoGeneralProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rbFoodsRating"/>

            <TextView
                android:id="@+id/tvFoodsInfoGeneralCodigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foods_info_general_codigo"
                android:layout_below="@id/tvFoodsInfoGeneralProducto"/>

            <TextView
                android:id="@+id/tvFoodsInfoGeneralMarca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foods_info_general_marca"
                android:layout_below="@id/tvFoodsInfoGeneralCodigo"/>

            <TextView
                android:id="@+id/tvFoodsInfoGeneralNeto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foods_info_general_neto"
                android:layout_below="@id/tvFoodsInfoGeneralMarca"/>

            <TextView
                android:id="@+id/tvFoodsInfoGeneralFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foods_info_general_fecha"
                android:layout_below="@id/tvFoodsInfoGeneralNeto"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--Etiqueta Info nutricional -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/foods_title_info_nutricional"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:paddingBottom="16dp"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="4"
                android:rowCount="17" >

                <TextView
                    android:id="@+id/tvFoodsInfoNutricionalPorcion"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_columnSpan="4"
                    android:text="@string/foods_info_nutricional_porcion" />

                <TextView
                    android:id="@+id/tvFoodsInfoNutricionalPorcionEnvase"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_columnSpan="4"
                    android:text="@string/foods_info_nutricional_porcion_envase" />

                <TextView
                    android:layout_marginLeft="24dp"
                    android:layout_row="2"
                    android:layout_column="2"
                    android:text="@string/foods_info_nutricional_por_100" />

                <TextView
                    android:layout_marginLeft="24dp"
                    android:layout_row="2"
                    android:layout_column="3"
                    android:text="@string/foods_info_nutricional_por_porcion" />

                <TextView
                    android:layout_row="3"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:textStyle="bold"
                    android:text="@string/foods_info_nutricional_energia" />

                <TextView
                    android:id="@+id/tvFoodsInfoNutricionalEnergia100"
                    android:layout_marginLeft="24dp"/>

                <TextView
                    android:id="@+id/tvFoodsInfoNutricionalEnergiaPorcion"
                    android:layout_marginLeft="24dp"/>

                <TextView
                    android:layout_row="4"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:textStyle="bold"
                    android:text="@string/foods_info_nutricional_proteinas" />

                <TextView
                    android:id="@+id/tvFoodsInfoNutricionalProteinas100"
                    android:layout_marginLeft="24dp"/>

                <TextView
                    android:id="@+id/tvFoodsInfoNutricionalProteinasPorcion"
                    android:layout_marginLeft="24dp"/>

                <TextView
                    android:layout_row="5"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:textStyle="bold"
                    android:text="@string/foods_info_nutricional_grasa_total" />

                <TextView
                    android:id="@+id/tvFoodsInfoNutricionalGrasaTotal100"
                    android:layout_marginLeft="24dp"/>

                <TextView
                    android:id="@+id/tvFoodsInfoNutricionalGrasaTotalPorcion"
                    android:layout_marginLeft="24dp"/>

                <TextView
                    android:layout_row="6"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:text="@string/foods_info_nutricional_grasa_sat" />

                <TextView
                    android:id="@+id/tvFoodsInfoNutricionalGrasaSaturada100"
                    android:layout_marginLeft="24dp"/>

                <TextView
                    android:id="@+id/tvFoodsInfoNutricionalGrasaSaturadaPorcion"
                    android:layout_marginLeft="24dp"/>

                <TextView
                    android:layout_row="7"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:text="@string/foods_info_nutricional_grasa_mono" />

                <TextView
                    android:id="@+id/tvFoodsInfoNutricionalGrasaMono100"
                    android:layout_marginLeft="24dp"/>

                <TextView
                    android:id="@+id/tvFoodsInfoNutricionalGrasaMonoPorcion"
                    android:layout_marginLeft="24dp"/>

                <TextView
                    android:layout_row="8"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:text="@string/foods_info_nutricional_grasa_poli" />

                <TextView
                    android:id="@+id/tvFoodsInfoNutricionalGrasaPoli100"
                    android:layout_marginLeft="24dp"/>

                <TextView
                    android:id="@+id/tvFoodsInfoNutricionalGrasaPoliPorcion"
                    android:layout_marginLeft="24dp"/>

                <TextView
                    android:layout_row="9"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:text="@string/foods_info_nutricional_grasa_trans" />

                <TextView
                    android:id="@+id/tvFoodsInfoNutricionalGrasaTrans100"
                    android:layout_marginLeft="24dp"/>

                <TextView
                    android:id="@+id/tvFoodsInfoNutricionalGrasaTransPorcion"
                    android:layout_marginLeft="24dp"/>

                <TextView
                    android:layout_row="10"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:text="@string/foods_info_nutricional_colesterol" />

                <TextView
                    android:id="@+id/tvFoodsInfoNutricionalColesterol100"
                    android:layout_marginLeft="24dp"/>

                <TextView
                    android:id="@+id/tvFoodsInfoNutricionalColesterolPorcion"
                    android:layout_marginLeft="24dp"/>

                <TextView
                    android:layout_row="11"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_rowSpan="2"
                    android:textStyle="bold"
                    android:text="@string/foods_info_nutricional_hidratos" />

                <TextView
                    android:layout_row="12"
                    android:layout_column="2"
                    android:id="@+id/tvFoodsInfoNutricionalHidratos100"
                    android:layout_marginLeft="24dp"/>

                <TextView
                    android:layout_row="12"
                    android:layout_column="3"
                    android:id="@+id/tvFoodsInfoNutricionalHidratosPorcion"
                    android:layout_marginLeft="24dp"/>

                <TextView
                    android:layout_row="13"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:text="@string/foods_info_nutricional_azucares" />

                <TextView
                    android:id="@+id/tvFoodsInfoNutricionalAzucares100"
                    android:layout_marginLeft="24dp"/>

                <TextView
                    android:id="@+id/tvFoodsInfoNutricionalAzucaresPorcion"
                    android:layout_marginLeft="24dp"/>

                <TextView
                    android:layout_row="14"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:text="@string/foods_info_nutricional_fibra" />

                <TextView
                    android:id="@+id/tvFoodsInfoNutricionalFibra100"
                    android:layout_marginLeft="24dp"/>

                <TextView
                    android:id="@+id/tvFoodsInfoNutricionalFibraPorcion"
                    android:layout_marginLeft="24dp"/>

                <TextView
                    android:layout_row="15"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:text="@string/foods_info_nutricional_sodio" />

                <TextView
                    android:id="@+id/tvFoodsInfoNutricionalSodio100"
                    android:layout_marginLeft="24dp"/>

                <TextView
                    android:id="@+id/tvFoodsInfoNutricionalSodioPorcion"
                    android:layout_marginLeft="24dp"/>

                <TextView
                    android:layout_row="16"
                    android:paddingTop="8dp"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:textStyle="bold"
                    android:text="@string/foods_info_nutricional_nota" />

            </GridLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--Etiqueta ingredientes -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ingredientes"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:paddingBottom="16dp"/>

            <TextView
                android:id="@+id/tvFoodsIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btFoodsAdditives"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foods_button_additives"
        style="@style/RaisedButton"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btFoodsRecommendations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foods_button_recommendations"
        style="@style/RaisedButton"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btFoodsImages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foods_button_images"
        style="@style/RaisedButton"/>

    <LinearLayout
        style="@style/Widget.CardContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btFoodsLike"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_thumb_up_white_24dp"
            style="@style/LikeButton"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btFoodsDisLike"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_thumb_down_white_24dp"
            style="@style/LikeButton"/>

    </LinearLayout>

</LinearLayout>
