<?xml version="1.0" encoding="utf-8"?>
<!-- ESTA NO HAY QUE EDITARLA -->
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp"
    card_view:cardUseCompatPadding="true"
    android:id="@+id/cvAdditivesCard"
    android:layout_marginTop="16dp">

    <RelativeLayout
        style="@style/Widget.CardContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Etiqueta Info general -->
        <TextView
            android:id="@+id/tvAdditivesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:paddingBottom="16dp"/>

        <TextView
            android:id="@+id/tvAdditivesShortDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAdditivesTitle"
            android:text="Clasifición peligro de origen origen"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tvAdditivesDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additives_description"
            android:layout_below="@id/tvAdditivesShortDescription"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tvAdditivesUsage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additives_usage"
            android:layout_below="@id/tvAdditivesDescription"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tvAdditivesSecondaryEffects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additives_secondary_effects"
            android:layout_below="@id/tvAdditivesUsage"
            android:layout_marginBottom="8dp"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>